Bug 149865 - FILEOPEN PPTX: table lacks border (outer right edge)
Summary: FILEOPEN PPTX: table lacks border (outer right edge)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Tables
  Show dependency treegraph
 
Reported: 2022-07-05 10:12 UTC by Gerald Pfeifer
Modified: 2024-09-12 11:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (254.49 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-07-05 10:12 UTC, Gerald Pfeifer
Details
Visual comparison LibreOffice vs Office 365 (192.33 KB, image/png)
2022-07-05 10:13 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-07-05 10:12:32 UTC
Created attachment 181122 [details]
Sample slide (PPTX)

Comparing the sample slide between PowerPoint (Office 365) and LibreOffice,
the latter lacks one border element for a cell on the outer right edge.

Present in:

  Version: 7.5.0.0.alpha0+ / LibreOffice Community
  Build ID: f1e15482bcf6bf65dc611e19cbd2ffff479ef141
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

  Version: 7.4.0.0.alpha1+ / LibreOffice Community
  Build ID: b2467d6c7af988f8ed4e090ebf9472be6c84fb06
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  
Looks like a regression, since not in

  Version: 7.2.8.0.0+ / LibreOffice Community
  Build ID: d293877ff029ae7c161ccfbade992485fd92fe75
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2022-04-26_20:29:27

and back all the way to 6.4.
Comment 1 Gerald Pfeifer 2022-07-05 10:13:49 UTC
Created attachment 181123 [details]
Visual comparison LibreOffice vs Office 365
Comment 2 Gerald Pfeifer 2022-07-05 10:17:23 UTC
This also regressed on the 7.3 branch, presumably via a backport.

Okay: 

  Version: 7.3.1.0.0+ / LibreOffice Community
  Build ID: 33d70d68aa67d567e9b18fa5947b86df6e378f32
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Not okay:

  Version: 7.3.6.0.0+ / LibreOffice Community
  Build ID: 3788d8be31764a3f44dc662f2d6e040a2a24510e
  CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US
Comment 3 Xisco Faulí 2022-07-05 11:06:59 UTC
Regression introduced by:

author	Gülşah Köse <gulsah.kose@collabora.com>	2022-02-01 16:03:14 +0300
committer	Gülşah Köse <gulsah.kose@collabora.com>	2022-03-02 11:57:25 +0100
commit 3faf005a367cbd28077403bf93810bbaf4805851 (patch)
tree 2fcee7f03bc52dfc6dbcafac55c77822c5da2b19
parent e8a004d54dc939b257b2851a78c324269e2a3973 (diff)
tdf#135843 Implement inside horizontal vertical borders.

Bisected with: bibisect-linux64-7.4

Adding Cc: to Gülşah Köse
Comment 4 Commit Notification 2024-09-11 10:28:33 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/070682854800cb983b452a5b5bd16943433c4b2b

tdf#149865 - FILEOPEN PPTX: fix table lacks border

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-11 18:50:54 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/70b8d8d980ffc48674b0bcaa3c5c36fe8b99d1b4

tdf#149865 - FILEOPEN PPTX: fix table lacks border

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-12 06:31:36 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a7468f083f79f5cf8b37665ea46a563ec1c3bd3e

tdf#149865: reduce size of sample file

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gerald Pfeifer 2024-09-12 11:56:36 UTC
Happy to confirm this as fixed in the latest nightly build

  Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: e0a5b29f653a314727e23489a3e98daff8386ff6
  CPU threads: 12; OS: Linux 6.10; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US