tdf#149865 - FILEOPEN PPTX: fix table lacks border

Fix wrong border line styles if we have merged cells.

Change-Id: I238aa08c65b9aefd7b77b0f4ae3c3df979a7171d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173109
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins